before error circle

--- a/public/assets/css/addEmployee.css
+++ b/public/assets/css/addEmployee.css
@@ -69,6 +69,10 @@ main{
 
 }
 
+#addEmployeeSubmit:hover{
+    background-color:#3c75f2 ;
+}
+
 #formTitle{
     text-align: center;
     margin: 0;
