--- a/views/partials/header.twig
+++ b/views/partials/header.twig
@@ -42,7 +42,7 @@
                         <a href="/showCompanyFaults">🛠 Défauts</a>
                     </li>
                     <li>
-                        <a href="/reports">📊 Rapports</a>
+                        <a href="#">📊 Compte rendu</a>
                     </li>
                     {% endif %}
                     <li>
