--- a/views/pages/addComputer.twig
+++ b/views/pages/addComputer.twig
@@ -46,7 +46,7 @@
 
         <div class="computerFormInput">
           <label for="purchaseDate">Date d'achat</label>
-          <input type="date" name="purchaseDate" id="purchaseDate" value="{{ computer.purchaseDate| default('') }}">
+          <input type="date" required name="purchaseDate" id="purchaseDate" value="{{ computer.purchaseDate| default('') }}">
         </div>
 
         <div>
